--- a/app/partials/directives/filterBuilder.html
+++ b/app/partials/directives/filterBuilder.html
@@ -43,12 +43,12 @@
         <input type="text" class="form-control" size="42" placeholder="Value" ng-model="filterRow.value" ng-change="dirtyFilterRow(filterRow)">
       </div>
       <div class="form-group">
-        <button type="button" class="btn btn-default refresh" ng-disabled="!(filterRow.dirty)" ng-click="updateFilterRow(filterRow.tableName, $index)">
+        <button type="button" class="btn btn-default refresh" ng-disabled="!(filterRow.dirty)" ng-click="updateFilterRow(filterRow.tableName, filterRow.index)">
           <span class="glyphicon glyphicon-refresh"></span>
         </button>
       </div>
       <div class="form-group pull-right">
-        <button type="button" class="btn delete" ng-click="removeFilterRow(filterRow.tableName, $index)">
+        <button type="button" class="btn delete" ng-click="removeFilterRow(filterRow.tableName, filterRow.index)">
           <span class="glyphicon glyphicon-remove"></span>
         </button>
       </div>
