--- a/app/partials/directives/queryResultsTable.html
+++ b/app/partials/directives/queryResultsTable.html
@@ -43,9 +43,16 @@
 
             <div class="form-group">
                 <label>Limit</label>
-                <input type="number" min="1" name="limitInput" class="form-control" ng-model="limit"
-                ng-class="{true: '', false: 'has-error'}[dataTableForm.limitInput.$error.number]">
+                <div class="input-group">
+                    <input type="number" min="1" name="limitInput" class="form-control" ng-model="limit" ng-class="{true: '', false: 'has-error'}[dataTableForm.limitInput.$error.number]">
+                    <div class="input-group-btn">
+                        <button type="button" class="btn btn-default refresh" ng-click="refreshData()">
+                            <span class="glyphicon glyphicon-refresh"></span>
+                        </button>
+                    </div>
+                </div>
             </div>
+
         </div>
     </div>
 </div>
@@ -100,7 +107,7 @@
                 ng-class="{true: '', false: 'has-error'}[dataTableForm.limitInput.$error.number]">
             </div>
 
-            <button type="button" class="btn btn-default refresh" ng-click="refreshData()">
+            <button type="button" class="btn btn-default refresh" ng-click="refreshData()" ng-hide="!(navbarItem)">
                 <span class="glyphicon glyphicon-refresh"></span>
             </button>
         </form>
