NEON-1442 The links popup used by Count By and Data Table is now an angular directive.  This also fixed a bug with the links popup not rendering at the correct z-index.  Deleted the PopupService because it is no longer needed.

--- a/app/partials/directives/countby.html
+++ b/app/partials/directives/countby.html
@@ -15,6 +15,8 @@
     </div>
 </div>
 
+<links-popup links-array="links" links-index="linksIndex"></links-popup>
+
 <div class="filter-reset pull-right" ng-class="{true: 'hidden', false: ''}[filterSet === undefined]">
     {{filterSet.key}}={{filterSet.value}}
     <a class="btn" ng-click="clearFilter()">
