--- a/app/partials/directives/queryResultsTable.html
+++ b/app/partials/directives/queryResultsTable.html
@@ -15,6 +15,8 @@
     </div>
 </div>
 
+<links-popup links-array="links" links-index="linksIndex"></links-popup>
+
 <div>
     <h4 class="count-header pull-left">Showing 
         <span class="count text-primary" ng-bind="tableOptions.data.length"></span> of 
