--- a/app/css/app.less
+++ b/app/css/app.less
@@ -5,28 +5,28 @@
     border-bottom: 0.1em solid black;
     margin-bottom: 2em;
     padding: 0 0 0.5em;
-}
 
-.menu:before {
-    content: "[";
-}
+    &:before {
+        content: "[";
+    }
 
-.menu:after {
-    content: "]";
-}
+    &:after {
+        content: "]";
+    }
 
-.menu > li {
-    display: inline;
-}
+    > li {
+        display: inline;
 
-.menu > li:before {
-    content: "|";
-    padding-right: 0.3em;
-}
+        &:before {
+            content: "|";
+            padding-right: 0.3em;
+        }
 
-.menu > li:nth-child(1):before {
-    content: "";
-    padding: 0;
+        &:nth-child(1):before {
+            content: "";
+            padding: 0;
+        }
+    }
 }
 
 .no-margin {
