Applying the new popup styling to the other popups.

--- a/app/partials/directives/addVisualization.html
+++ b/app/partials/directives/addVisualization.html
@@ -1,4 +1,4 @@
-<ul class=" nav navbar-nav add-visualization-button">
+<ul class="nav navbar-nav add-visualization-button neon-popup-button">
     <li>
         <a  data-toggle="modal" data-target="#addVisualizationModel" class="collapsed dropdown-toggle primary">
           <span class="glyphicon glyphicon-plus-sign"></span> Add Visualization
