--- a/app/partials/directives/poweredByNeon.html
+++ b/app/partials/directives/poweredByNeon.html
@@ -1,9 +1,8 @@
-<a  data-toggle="modal" data-target="#aboutNeonModal" class="navbar-text pull-right" 
-  ng-click="loadNeonInfo()">
+<a data-toggle="modal" data-target="#aboutNeonModal" class="navbar-text neon-popup-button pull-right" ng-click="loadNeonInfo()">
   Powered by <img class="brand-image" src="img/Neon_60x34.png"></img>
 </a>
 
-<div class="modal fade" id="aboutNeonModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade neon-popup" id="aboutNeonModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
