NEON-1344 Fixing a styling issue with the remove column buttons in the Data Table in Firefox.

--- a/app/css/directives/queryResultsTable.css
+++ b/app/css/directives/queryResultsTable.css
@@ -111,6 +111,8 @@
 
 .query-results-grid .slick-header .slick-header-column .remove-column-button {
     color: #999999;
+    position: absolute;
+    right: 5px;
 }
 
 .query-results-grid .slick-header .slick-header-column.ui-state-hover .remove-column-button {
