NEON-1324 converting css to less

--- a/app/css/app.less
+++ b/app/css/app.less
@@ -34,4 +34,10 @@
     margin-right: 0px !important;
 }
 
+@import 'fonts.less';
 @import 'errorStyle.less';
+@import 'style.less';
+@import 'widgetStyle.less';
+
+/* directives */
+@import 'directives/addVisualization.less';
