--- a/app/css/errorStyle.less
+++ b/app/css/errorStyle.less
@@ -8,13 +8,15 @@
         cursor: pointer;
     }
 
-    .neon-error-stacktrace.well {
-        font-size: 10px;
-        height: 90px;
-        overflow: auto;
-        padding: 2px 4px;
-        white-space: pre;
-        margin-top: 5px;
+    .neon-error-stacktrace {
+        &.well {
+            font-size: 10px;
+            height: 90px;
+            overflow: auto;
+            padding: 2px 4px;
+            white-space: pre;
+            margin-top: 5px;
+        }
     }
 }
 
