NEON-1324 converting css to less

--- a/app/css/app.less
+++ b/app/css/app.less
@@ -1,5 +1,3 @@
-/* app css stylesheet */
-
 .menu {
     list-style: none;
     border-bottom: 0.1em solid black;
@@ -37,7 +35,21 @@
 @import 'fonts.less';
 @import 'errorStyle.less';
 @import 'style.less';
-@import 'widgetStyle.less';
 
-/* directives */
+// directives
 @import 'directives/addVisualization.less';
+@import 'directives/barchart.less';
+@import 'directives/circularHeatChart.less';
+@import 'directives/circularHeatForm.less';
+@import 'directives/countBy.less';
+@import 'directives/directedGraph.less';
+@import 'directives/filterState.less';
+@import 'directives/heatMap.less';
+@import 'directives/linechart.less';
+@import 'directives/queryResultsTable.less';
+@import 'directives/stackedBarChart.less';
+@import 'directives/sunburst.less';
+@import 'directives/tagCloud.less';
+@import 'directives/timelineSelector.less';
+@import 'directives/timelineSelectorChart.less';
+@import 'directives/visualizationWidget.less';
