--- a/app/css/errorStyle.less
+++ b/app/css/errorStyle.less
@@ -1,5 +1,5 @@
 .neon-error-element {
-    /* Important because remarkable-bootstrap-notify will try to overwrite the margin against our wishes. */
+    // Important because remarkable-bootstrap-notify will try to overwrite the margin against our wishes.
     margin: 20px!important;
 
     .neon-error-details {
@@ -35,7 +35,7 @@
     }
 }
 
-/* Progress bar styling from the official website (http://bootstrap-growl.remabledesigns.com). */
+// Progress bar styling from the official website (http://bootstrap-growl.remabledesigns.com).
 [data-notify="progressbar"] {
     margin-bottom: 0px;
     position: absolute;
