--- a/app/css/fonts.less
+++ b/app/css/fonts.less
@@ -29,7 +29,7 @@
     url('../fonts/opensans-bold-webfont.svg#open_sansbold') format('svg');
 }
 
-/* Better font rendering for Chrome */
+// Better font rendering for Chrome
 @media screen and (-webkit-min-device-pixel-ratio:0) {
     @font-face {
         font-family: 'Open Sans';
