--- a/app/css/style.less
+++ b/app/css/style.less
@@ -8,6 +8,7 @@
         transform: rotate(360deg);
     }
 }
+
 @keyframes load8 {
     0% {
         -webkit-transform: rotate(0deg);
@@ -18,8 +19,6 @@
         transform: rotate(360deg);
     }
 }
-
-
 
 * {
     outline: 0 none !important;
@@ -214,7 +213,7 @@ label{
 
     span {
         .chart-options-text {
-            /* Set the top position so the text aligns vertically with the gear icon. */
+            // Set the top position so the text aligns vertically with the gear icon.
             position: relative;
             top: -1px;
             margin-right: 5px;
@@ -623,8 +622,8 @@ label{
         top: 0;
         width: 100%;
         z-index: 1040;
-        /* Disable transform used in Bootstrap 3.2.0 Affix plugin.  This hides any modals that are defined
-           inside the nav and breaks the database-overlay .*/
+        //Disable transform used in Bootstrap 3.2.0 Affix plugin.  This hides any modals that are defined
+        // inside the nav and breaks the database-overlay .
         transform: none;
         -webkit-transform: none;
     }
@@ -696,7 +695,7 @@ label{
     }
 }
 
-/* Fixes for modal in header */
+// Fixes for modal in header
 .navbar-static-top{
     z-index: auto;
 }
