--- a/app/css/directives/filterState.less
+++ b/app/css/directives/filterState.less
@@ -1,8 +1,22 @@
-.filterStateDirective {
-    margin: auto;
-    padding: 20px;
-    display: block;
-    height: 100%;
+//
+// Copyright 2014 Next Century Corporation
+// Licensed under the Apache License, Version 2.0 (the "License");
+// you may not use this file except in compliance with the License.
+// You may obtain a copy of the License at
+//
+//     http://www.apache.org/licenses/LICENSE-2.0
+//
+// Unless required by applicable law or agreed to in writing, software
+// distributed under the License is distributed on an "AS IS" BASIS,
+// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+// See the License for the specific language governing permissions and
+// limitations under the License.
+//
+//
+
+.filter-state-header {
+    font-size: larger;
+    font-weight: bold;
 }
 
 .filter-state-view {
@@ -15,7 +29,9 @@
     text-align: center;
 }
 
-.filter-state-header {
-    font-size: larger;
-    font-weight: bold;
+.filterStateDirective {
+    margin: auto;
+    padding: 20px;
+    display: block;
+    height: 100%;
 }
