Minor styling and behavior changes.  Changing the Sort By field or buttons in the Data Table now automatically updates the SlickGrid table.  In the Heat Map, the user must now click the refresh button after changing the data limit because it no longer causes the map to update automatically.

--- a/app/partials/directives/queryResultsTable.html
+++ b/app/partials/directives/queryResultsTable.html
@@ -32,17 +32,16 @@
 
             <div class="form-input-group">
                 <label>Sort By</label>
-
                 <div class="input-group">
-                    <select class="form-control" ng-model="sortByField" ng-disabled="!(fields.length > 0)" ng-options="field for field in fields">
+                    <select class="form-control" ng-model="sortByField" ng-disabled="!(fields.length > 0)" ng-options="field for field in fields" ng-change="refreshData()">
                     </select>
 
                     <div class="input-group-btn">
                         <label class="btn btn-default active" ng-class="{true: 'active', false: ''}[sortDirection === ASCENDING]">
-                            <input type="radio" ng-model="sortDirection" style="display:none" ng-value="ASCENDING"> ASC
+                            <input type="radio" ng-model="sortDirection" style="display:none" ng-value="ASCENDING" ng-click="handleAscButtonClick()"> ASC
                         </label>
                         <label class="btn btn-default" ng-class="{true: 'active', false: ''}[sortDirection === DESCENDING]">
-                            <input type="radio" ng-model="sortDirection" style="display:none" ng-value="DESCENDING"> DESC
+                            <input type="radio" ng-model="sortDirection" style="display:none" ng-value="DESCENDING" ng-click="handleDescButtonClick()"> DESC
                         </label>
                     </div>
                 </div>
