--- a/app/partials/directives/directedGraph.html
+++ b/app/partials/directives/directedGraph.html
@@ -13,11 +13,13 @@
                 <select class="form-control" ng-model="selectedTable" ng-options="table.name for table in tables" ng-required="true" ng-disabled="(tables.length < 2)" ng-change="updateFieldsAndQueryForData()">
                 </select>
             </div>
+
             <div class="form-group">
                 <label>Node Field</label>
                 <select class="form-control" ng-model="selectedNodeField" ng-options="field for field in fields" ng-required="true" ng-disabled="(fields.length == 0)" ng-change="clearFilters()">
                 </select>
             </div>
+
             <div class="form-group">
                 <label>Link(s) Field</label>
                 <select class="form-control" ng-model="selectedLinkField" ng-options="field for field in fields" ng-required="false" ng-disabled="(fields.length == 0)" ng-change="clearFilters()">
@@ -30,9 +32,17 @@
                     <option value=""></option>
                 </select>
             </div>
+
             <div class="form-group">
                 <label>Graph Node Limit</label>
-                <input type="number" min="50" class="form-control" ng-model="nodeLimit" ng-change="queryForData()"></input>
+                <div class="input-group">
+                    <input type="number" min="1" class="form-control" ng-model="nodeLimit"></input>
+                    <div class="input-group-btn">
+                        <button type="button" class="btn btn-default refresh" ng-click="queryForData()">
+                            <span class="glyphicon glyphicon-refresh"></span>
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
