--- a/app/partials/directives/heatMap.html
+++ b/app/partials/directives/heatMap.html
@@ -4,7 +4,7 @@
         <a class="btn btn-lg text-muted collapsed" data-toggle="collapse" 
             data-target=".{{uniqueChartOptions}} .map-options" data-animation=false
             ng-click="toggleOptionsDisplay()">
-            <span class="chart-options-text" ng-hide="(dataLength < limit)">{{limit}} data limit</span>
+            <span class="chart-options-text" ng-hide="(dataLength < previousLimit)">{{previousLimit}} data limit</span>
             <span class="glyphicon glyphicon-cog"></span>
             <span class="caret"></span>
         </a>
@@ -17,21 +17,31 @@
                         <select class="form-control" ng-model="selectedTable" ng-options="table.name for table in tables" ng-required="true" ng-disabled="(tables.length < 2)" ng-change="updateFieldsAndQueryForMapData()">
                         </select>
                     </div>
+
                     <div class="form-group">
                         <label>Latitude</label>
                         <select class="form-control" ng-model="latitudeField" ng-options="field for field in fields" ng-required="true" ng-disabled="!(fields.length > 0)">
                         </select>
                     </div>
+
                     <div class="form-group">
                         <label>Longitude</label>
                         <select class="form-control" ng-model="longitudeField" ng-options="field for field in fields" ng-required="true" ng-disabled="!(fields.length > 0)">
                         </select>
                     </div>
+
                     <div class="form-group">
                         <label>Data Limit</label>
-                        <input type="number" min="1" name="mapOptionsform" class="form-control" ng-model="limit"
-                            ng-class="{true: '', false: 'has-error'}[limitInput.$error.number]">
+                        <div class="input-group">
+                            <input type="number" min="1" name="mapOptionsform" class="form-control" ng-model="limit" ng-class="{true: '', false: 'has-error'}[limitInput.$error.number]">
+                            <div class="input-group-btn">
+                                <button type="button" class="btn btn-default refresh" ng-click="handleLimitRefreshClick()">
+                                    <span class="glyphicon glyphicon-refresh"></span>
+                                </button>
+                            </div>
+                        </div>
                     </div>
+
                     <div class="form-group">
                         <label>Map Layer</label>
                         <div class="btn-group">
